Fixed a style to make it more visible

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -33,7 +33,6 @@ ol ul{
 }
 
 a {
-  color: darkgray;
   text-decoration: none;
   font-weight: normal;
 }
