--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -41,6 +41,10 @@
   margin-bottom: 20px;
 }
 
+.link-home {
+  color: darkgray;
+}
+
 // WELCOME PAGE
 
 .application-list {
